--- a/src/shared/Header.css
+++ b/src/shared/Header.css
@@ -15,11 +15,8 @@
     
     /* --------header/nav-----------*/
     
-     
-    /* styles for header */
-    
-    nav, header {
-        /* font-family: 'Fredericka the great'; */
+     nav, header {
+        
         font-family: "Muli",Sans-serif;
     }
     
@@ -75,33 +72,37 @@
     .container-center{
         text-align: center; /* Center align the text */
         margin-top: 75px; 
-    }
+    } */
     
     /* Media query for smaller screens */
-    @media screen and (max-width: 768px) {
+     /* @media screen and (max-width: 768px) {
         .logo-size {
-            width: 150px; /* Adjust logo size for smaller screens */
-            margin-left: 50px; /* Adjust logo margin for smaller screens */
+            width: 150px; /* Adjust logo size for smaller screens 
+            margin-left: 50px; /* Adjust logo margin for smaller screens 
         }
         
         .nav-item {
-            font-size: 12px; /* Adjust font size of nav items for smaller screens */
+            font-size: 12px; /* Adjust font size of nav items for smaller screens 
         }
         
         #color-white {
-            margin-right: 20px; /* Adjust margin of color-white anchor for smaller screens */
+            margin-right: 20px; /* Adjust margin of color-white anchor for smaller screens 
         }
         
         .nav-item a {
-            margin-right: 15px; /* Adjust margin of nav item anchor for smaller screens */
+            margin-right: 15px; /* Adjust margin of nav item anchor for smaller screens 
         }
-    }
+    }  */
+
     
     /*------- heading section --------*/
+   
     
     h1, h2 {
         font-size: 3rem;
         /* color: var(--goldenrod); */
         margin-top: 15px; /* Remove default margin to ensure proper centering */
     }
+
+
     
